# franka_hri

./: .gitignore  README.md  environment.yml
hri_manager/: README.md  environment.yml  (+4 more)
llm_merger/: package.xml  setup.cfg  setup.py
llm_merger/llm_merger/: generate_dataset.py  llm_model.py  plotter.py  role_setup.py  skill_command.py  test_llm_model.py
llm_merger/llm_merger/models/: llm.py
llm_merger/llm_merger/saved_datasets/: D1_CFG2_n0.0.json  D1_CFG2_n0.0.npy  D1_CFG2_n0.1.json  D1_CFG2_n0.1.npy  D1_CFG2_n0.2.json  D1_CFG2_n0.2.npy  D1_CFG2_n0.3.json  D1_CFG2_n0.3.npy  D1_CFG2_n0.4.json  D1_CFG2_n0.4.npy  D1_CFG2_n0.5.json  D1_CFG2_n0.5.npy  D1_CFG2_n0.6.json  D1_CFG2_n0.6.npy  D1_CFG2_n0.7.json  D1_CFG2_n0.7.npy  D1_CFG2_n0.8.json  D1_CFG2_n0.8.npy  D1_CFG2_n0.9.json  D1_CFG2_n0.9.npy  D1_CFG2_n1.0.json  D1_CFG2_n1.0.npy  D1_CFG3_n0.0.npy  D1_CFG3_n0.1.json  D1_CFG3_n0.1.npy  D1_CFG3_n0.2.json  D1_CFG3_n0.2.npy  D1_CFG3_n0.3.json  D1_CFG3_n0.3.npy  D1_CFG3_n0.4.json  D1_CFG3_n0.4.npy  D1_CFG3_n0.5.json  D1_CFG3_n0.5.npy  D1_CFG3_n0.6.json  D1_CFG3_n0.6.npy  D1_CFG3_n0.7.json  D1_CFG3_n0.7.npy  D1_CFG3_n0.8.json  D1_CFG3_n0.8.npy  D1_CFG3_n0.9.json  (+154 more)
llm_merger/llm_merger/saved_inputs/: save_0.npz  save_1.npz  save_2.npz  save_3.npz  save_4.npz  save_5.npz  save_6.npz  save_7.npz  save_8.npz
llm_merger/llm_merger/saved_results/D1_v4/: EXAONE-3.5-2.4B-Instruct_deterministic.npy  EXAONE-3.5-2.4B-Instruct_probabilistic.npy  SmolTulu-1.7b-Instruct_deterministic.npy  argmax.npy  granite-3.1-2b-instruct_deterministic.npy  granite-3.1-2b-instruct_probabilistic.npy
(+54 files in other folders)
