<?xml version="1.0"?>
<package format="3">
  <name>llm_merger</name>
  <version>0.0.1</version>
  <description>.</description>

  <maintainer email="petr.vanc@cvut.cz">petrvanc</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
